--- a/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html
+++ b/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html
@@ -10,8 +10,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="canonical" href="https://github.com/Kenzonews/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html" />
-    <link rel="alternate" href="https://github.com/Kenzonews/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html" hreflang="id-ID" />
+    <link rel="canonical" href="https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html" />
+    <link rel="alternate" href="https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html" hreflang="id-ID" />
     <link rel="shortcut icon" type="image/x-icon" href="https://juststartmarketing.net/img/Povicon-benihtoto.png" />
     <link rel="apple-touch-icon" href="https://juststartmarketing.net/img/Povicon-benihtoto.png" />
     <link rel="icon" type="image/x-icon" href="https://juststartmarketing.net/img/Povicon-benihtoto.png" />
@@ -35,7 +35,7 @@
     <!-- Facebook -->
     <meta property="og:title" content="Rahasia Kemenangan Terbaru di Mahjong Ways 2: Strategi Ampuh & Tips Mudah!" />
     <meta property="og:description" content="Mari temukan rahasia kemenangan terbaru di Mahjong Ways 2 bersama strategi ampuh dan tips mudah yang akan membantu Anda meraih kemenangan!" />
-    <meta property="og:url" content="https://github.com/Kenzonews/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html" />
+    <meta property="og:url" content="https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html" />
     <meta property="og:image" content="https://i.postimg.cc/rpBQ6jKb/T2-copy.jpg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:site_name" content="BENIHTOTO" />
@@ -85,7 +85,7 @@
         "@type": "Organization",
         "name": "BENIHTOTO",
         "alternateName": "Rahasia Kemenangan Terbaru di Mahjong Ways 2: Strategi Ampuh & Tips Mudah!",
-        "url": "https://github.com/Kenzonews/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html",
+        "url": "https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html",
         "logo": "https://juststartmarketing.net/img/Povicon-benihtoto.png"
       }
     </script>
@@ -97,12 +97,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "https://github.com/Kenzonews/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html"
+          "item": "https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html"
         }, {
           "@type": "ListItem",
           "position": 2,
           "name": "BENIHTOTO",
-          "item": "https://github.com/Kenzonews/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html"
+          "item": "https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html"
         }]
       }
     </script>
@@ -112,7 +112,7 @@
         "@type": "NewsArticle",
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "https://github.com/Kenzonews/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html"
+          "@id": "https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html"
         },
         "headline": "Rahasia Kemenangan Terbaru di Mahjong Ways 2: Strategi Ampuh & Tips Mudah!",
         "description": "Mari temukan rahasia kemenangan terbaru di Mahjong Ways 2 bersama strategi ampuh dan tips mudah yang akan membantu Anda meraih kemenangan!",
@@ -120,7 +120,7 @@
         "author": {
           "@type": "Organization",
           "name": "BENIHTOTO",
-          "url": "https://github.com/Kenzonews/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html"
+          "url": "https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html"
         },
         "publisher": {
           "@type": "Organization",
@@ -223,7 +223,7 @@
     </section>
 
     <section class='n-container m-b-normal'>
-      <div class='container' style='text-align: center;'><span>© 2025 <a href="https://github.com/Kenzonews/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html">BatBongNews.</a> All Rights Reserved.</span></div>
+      <div class='container' style='text-align: center;'><span>© 2025 <a href="https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html">BatBongNews.</a> All Rights Reserved.</span></div>
     </section>
   </body>
 </html>
