--- a/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html
+++ b/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html
@@ -9,7 +9,8 @@
     <meta name="yandexbot" content="all" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />	
+    <meta name="google-site-verification" content="PyXEjbGMzI_EbDll6VJp1rihERq6bM-RzVEDOFs6F5k" />
     <link rel="canonical" href="https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html" />
     <link rel="alternate" href="https://kenzonews.github.io/berita/tips-mudah-menang-strategi-ampuh-di-mahjong-ways-2.html" hreflang="id-ID" />
     <link rel="shortcut icon" type="image/x-icon" href="https://juststartmarketing.net/img/Povicon-benihtoto.png" />
